fix mobile overflow

--- a/src/App.css
+++ b/src/App.css
@@ -524,7 +524,7 @@ h3 {
   }
 
   .map-value-desc-container {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100vh;
     bottom: 0;
